en/1.21/_sources/reference/commands.rst.txt
.. _commands:

Commands
========


Consumer commands
-----------------

Commands related with the installation and usage of Conan packages:

.. toctree::
  :maxdepth: 1

  commands/consumer/install.rst
  commands/consumer/config.rst
  commands/consumer/get.rst
  commands/consumer/info.rst
  commands/consumer/search.rst


Creator commands
----------------

Commands related to the creation of Conan recipes and packages:

.. toctree::
  :maxdepth: 1

  commands/creator/create.rst
  commands/creator/export.rst
  commands/creator/export-pkg.rst
  commands/creator/new.rst
  commands/creator/upload.rst
  commands/creator/test.rst


Package development commands
----------------------------

Commands related to the local (user space) development of a Conan package:

.. toctree::
  :maxdepth: 1

  commands/development/source.rst
  commands/development/build.rst
  commands/development/package.rst
  commands/development/editable.rst
  commands/development/workspace.rst


Misc commands
-------------

Other useful commands:

.. toctree::
  :maxdepth: 1

  commands/misc/profile.rst
  commands/misc/remote.rst
  commands/misc/user.rst
  commands/misc/imports.rst
  commands/misc/copy.rst
  commands/misc/download.rst
  commands/misc/remove.rst
  commands/misc/alias.rst
  commands/misc/inspect.rst
  commands/misc/graph.rst
  commands/misc/help.rst
  commands/misc/conan_build_info.rst



JSON Output
-----------

JSON documents generated by the commands:

.. toctree::
  :maxdepth: 1

  commands/output/install.rst
  commands/output/search.rst
  commands/output/upload.rst
  commands/output/user.rst
  commands/output/info.rst
  commands/output/config.rst

Return codes
------------

.. toctree::
  :maxdepth: 1

  commands/return_codes.rst